Correction de l'alignement des colonnes

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,10 @@
   padding: 0;
   text-align: center;
   width: 100lh;
-  height: 100vh;
-}
-
-.row.m-0 {
-  min-height: 100%;
+  min-height: 100vh;
   background-color: whitesmoke;
 }
+
 .col-md-9 {
-  height: 100%;
   padding-bottom: 2rem;
 }
